[gd_scene load_steps=5 format=1]

[ext_resource path="res://main/main.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/SimpleBeat.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/pressed.wav" type="Sample" id=3]

[sub_resource type="SampleLibrary" id=1]

samples/pressed = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}

[node name="main" type="Node"]

script/script = ExtResource( 1 )

[node name="background_container" type="Node" parent="."]

[node name="planets_container" type="Node" parent="."]

[node name="title_container" type="Node" parent="."]

[node name="scene_container" type="Node" parent="."]

[node name="background_music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 2 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="sample_player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


